# minyoung-mah

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.ai/sessions/: session-2026-04-13-0001.md  session-2026-04-14-0001.md  session-2026-04-15-0001.md  session-2026-04-15-0002.md  session-2026-04-15-0003.md  session-2026-04-15-0004.md  session-2026-04-15-0005.md  session-2026-04-16-0001.md  session-2026-04-20-0001.md  session-2026-04-24-0001.md
archive/: README.md
archive/apt_legal_agent_demo/apt_legal_agent/: app.py  bootstrap.py
archive/apt_legal_agent_demo/apt_legal_agent/a2a/: __init__.py  agent_card.py  hitl_channel.py  sse_handler.py  task_handler.py
archive/apt_legal_agent_demo/apt_legal_agent/models/: dispute.py
archive/apt_legal_agent_demo/apt_legal_agent/prompts/: __init__.py  classifier.py  responder.py  retrieval_planner.py
archive/apt_legal_agent_demo/apt_legal_agent/roles/: retrieval_planner.py
archive/apt_legal_agent_demo/apt_legal_agent/tools/: mcp_adapters.py
archive/apt_legal_agent_demo/tests/: test_a2a_task_handler.py  test_scenarios.py
archive/docs/: 02_coding_agent_mapping.md
docs/: ARCHITECTURE.md  CONSUMER_SETUP_FAQ.md
docs/design/: 01_core_abstractions.md  03_apt_legal_mapping.md  04_open_questions.md  05_reference_topologies.md  AGENTS.md
docs/origin/: AGENTS.origin.md  EVIDENCE.md  README.md  session-2026-04-12-0005.md  session-2026-04-12-0006.md
examples/: apt_legal_minimal.py
examples/apt_legal_agent/: pyproject.toml
examples/apt_legal_agent/apt_legal_agent/: __init__.py  config.py  pipeline.py
examples/apt_legal_agent/apt_legal_agent/models/: __init__.py  classification.py  plan.py  response.py
examples/apt_legal_agent/apt_legal_agent/roles/: __init__.py  classifier.py  responder.py
examples/apt_legal_agent/apt_legal_agent/tools/: __init__.py  mcp_client.py
examples/apt_legal_agent/tests/: conftest.py  test_pipeline_e2e.py
minyoung_mah/: AGENTS.md  __init__.py  config.py  logging_config.py  models.py
minyoung_mah/cli/: AGENTS.md  app.py  display.py  question_renderer.py
minyoung_mah/context/: __init__.py  boundary.py  compactor.py  manager.py  policy.py  prompts.py
minyoung_mah/core/: AGENTS.md  __init__.py  loop.py  orchestrator.py  protocols.py  registry.py  state.py  tool_adapter.py  tool_call_utils.py  tool_invocation.py  types.py
minyoung_mah/hitl/: AGENTS.md  __init__.py  channels.py  interrupt.py
minyoung_mah/langgraph/: __init__.py  subagent_task_tool.py
minyoung_mah/memory/: AGENTS.md  __init__.py  extractor.py  middleware.py  schema.py  store.py
minyoung_mah/model/: AGENTS.md  __init__.py  router.py
minyoung_mah/observer/: AGENTS.md  __init__.py  events.py
minyoung_mah/resilience/: AGENTS.md  __init__.py  error_handler.py  policy.py  progress_guard.py  progress_watchdog.py  retry_policy.py  safe_stop.py  watchdog.py
minyoung_mah/skills/: __init__.py
minyoung_mah/subagents/: AGENTS.md  __init__.py  factory.py  manager.py  models.py  registry.py
minyoung_mah/tools/: AGENTS.md  ask_tool.py  file_ops.py  shell.py  task_tool.py  todo_tool.py
minyoung_mah/utils/: AGENTS.md  langfuse_trace_exporter.py
tests/: AGENTS.md  test_ask_tool.py  test_interrupt_integration.py  test_memory.py  test_p35_phase3.py  test_p35_regressions.py  test_performance.py  test_resilience.py  test_shell_tool.py  test_subagents.py  test_todo_tool.py
