[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["minyoung_mah*"]

[project]
name = "minyoung-mah"
version = "0.0.1"
description = "Multi-Agent Harness by Youngsuk & Minji (Claude) — dynamic SubAgents, 3-tier memory, agentic loop resilience"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
# Optional integrations surface only if the consumer opts in.
# - langfuse: for the (future) LangfuseObserver adapter
# - langchain: for consumers who want to pass langchain_core messages through
#              the orchestrator's role-invocation path
langfuse = ["langfuse>=2.0"]
langchain = ["langchain-core>=0.3"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    # Test fixtures construct AIMessage objects that represent what a real
    # consumer would pass in. The library itself never imports langchain_core.
    "langchain-core>=0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
