[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["minyoung_mah*"]

[tool.setuptools.package-data]
minyoung_mah = ["py.typed"]

[project]
name = "minyoung-mah"
version = "0.1.1"
description = "Multi-Agent Harness by Youngsuk & Minji (Claude) — static pipelines, 6 core protocols, LiteLLM-backed observability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    # The Orchestrator's structured fast path and tool-calling loop call
    # `with_structured_output`, `bind_tools`, `ainvoke`, and build
    # HumanMessage/SystemMessage/AIMessage/ToolMessage objects. Every
    # consumer that runs `run_pipeline` or `invoke_role` therefore needs
    # a LangChain-compatible chat model. Keeping this optional was a
    # polite fiction — consumers already had to install it to make
    # anything run end-to-end.
    "langchain-core>=0.3",
]

[project.optional-dependencies]
# There is intentionally no [langfuse] extra. The library does not ship
# an LLM-level trace adapter — consumers wire Langfuse at the LiteLLM
# layer via `litellm.success_callback = ["langfuse"]`. The library's
# Observer protocol stays at orchestration level. See
# docs/design/05_reference_topologies.md.

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
