[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apt_legal_agent*"]

[project]
name = "apt-legal-agent"
version = "0.0.1"
description = "Apartment legal Q&A vertical agent built on minyoung-mah"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minyoung-mah",
    "langchain-openai>=0.3.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
